--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -1,9 +1,10 @@
 .spinner {
   position: absolute;
   top: 50%;
-  left: 50%;
+  left: 55%;
   transform: translate(-50%, 0);
   text-align: center;
+  z-index: 100;
 }
 
 .new-session-prompt {
